style(index.css): hide scrollbars and prevent horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@ body {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+  overflow-x: hidden;
+
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body::-webkit-scrollbar {
